--- a/a.html
+++ b/a.html
@@ -98,7 +98,7 @@
             <h2 class="card-title">Voices / the WALL</h2>
             <b>por Leo/need</b>
             <p class="card-description">as musicas que eu tenho 61 horas tocadas. esperei um ano pela versão completa, pois ambas nao tinham.</p>
-            <a href="https://youtu.be/7Y9sJvLI3Po?si=oyutfOPOZVwSueQJ" class="card-button">Ouçar mais</a>
+            <a href="https://www.youtube.com/watch?v=WId6uL5X2QA&list=OLAK5uy_nsSymGSKKlqMSbZLzC4Fh9q6ZzcnH3xQE" class="card-button">Ouçar mais</a>
 
         </div>
     </div>
